@@ -2,25 +2,15 @@
 Hash: SHA256
 
 DIST libpgm-5.1.116~dfsg.tar.gz 1629377 SHA256 40671e10e494af2e69806b21e7ec4e192c94e164c4082524931e470220383d2b
-DIST libpgm-5.1.118~dfsg.tar.gz 1046589 SHA256 b74c11be9fe226d03e19839c6d841765955f736ae0d12db9baf1447d107e63ef
+DIST libpgm-5.1.118~dfsg.tar.gz 1046589 SHA256 b74c11be9fe226d03e19839c6d841765955f736ae0d12db9baf1447d107e63ef SHA512 9ee358fb473431da99d9382329625cd146c2447dd6567c8b394aebc1d67d53bb4f3423a9b824180884658c34c103ed03915a4d93d3a66c78bb5947c2166c01a9 WHIRLPOOL 38cdbf203a21256da2d374a079e936ab541048fd07f206c772f29eaa380747690f06d75aa6ba8e3cb23249d7d3f21e4a8a0a4da16838a91970f53185ea4099f4
 EBUILD openpgm-5.1.116.ebuild 1036 SHA256 4ddb8d43e7fa58a333f64989cb86001d642380f87c6d336bc7a6bc1c1617cfdb SHA512 9d2c07de280267b767450ad488afb8f245cce0a82bb5eb25bb23438c46c4f1c70db5dedf6c331493406611aa00ac064e37781b6808b8364ef7957e7efa57554f WHIRLPOOL a5888058d3ce210b82e41353041965d6873adbe1c9c045e578d9ada4ec525feffc1c8ab63a30cb74cf9649b7436de1b8dfa244daf92d38fe72be56801ab643b6
-EBUILD openpgm-5.1.118.ebuild 1043 SHA256 9095af03f261245b0507ac315b673eb2087bd03d2a8fa8bdba1c03b06135b743 SHA512 168b900fad9c42d833873a565799e988899ba6f70af8b4b6c79fe2680732d913c8e9c13c34fdbb0dec4e47ae462acf7080c0dafed038956d6604e507565eb615 WHIRLPOOL 637c1cbb3a4a1dc71c00c198941a6120c592066a159f5356324b17f449cbaa881f5df17bc634a8e4f8968904421264b357507f5c47cd6cab985d83654bc3a470
-MISC ChangeLog 1320 SHA256 32223b5049747ce60eecff9aaa28a4fcfb5d76cb291f6a8b36e67206582e6ef0 SHA512 9cd10b7059cbb0e99e7fb247f86a7139a6c13f0a14e7a3f18e5653aa3bba474d0543ca4b2e56e77e941948741a078ccbdfeb7f463abb27d983ed5f2fe236137f WHIRLPOOL 77a1e5dba7fcc3ad48b0d91e742cb373d56b525061490e72de0f64148135ceee43586cb06f988600f094357e6f2ca5ed455e1a5dfd134d48f860c42edd7df622
+EBUILD openpgm-5.1.118.ebuild 1044 SHA256 1a1a80703c0e6732e3194b71e72c54801b600c9c508f445b3620190bbf2ac078 SHA512 8f1b505249e3525890ca4e248b1ce73fc1bffa42463d6056d277d3c188f31f657b402765b3e2fdc62bc78f7d55394dc9de8adf0f5791bd7ef81cc5cd63201255 WHIRLPOOL 6de6ca64251d10e0aa5680429c1f98438da9902485bf7d99a241dc16a4c118482e90d3f999bea5325503df304ef7e22168a46792f70ffcf6e3132bcea9d547b0
+MISC ChangeLog 1418 SHA256 e1d8ad7a925c84c4b47588c33d290b93446c1d539007afa017008495fd657f54 SHA512 a283f3038e5924be287d30baaafbabe15de5d58afd6089b1b66cd2c06cb3dc8658181b7404867cba81d9ff2c8d67a25accc5ff3218b28a851131f42335e72e16 WHIRLPOOL e3a56be18cd72defc2eca90aa3c9ac4314bdaae6879a9a0001ec719d6fc39f044bb2e2cdddaf7aa5334462c6dd46a7a1d9e44ee5276165c53b9fd2274cf01294
 MISC metadata.xml 409 SHA256 4cef46cdc3e0a7d12456b8f378ead0037defefd4843f9d60ce1874a50adeade9 SHA512 566e6d81be0fbe2f1782cdaff6fb96768ef776268926c089210f6a6a9d09df3b2a6ce49d19fff1f4b69a02751b0f6022d710b3a9b54ecfc24b7441ef207fab14 WHIRLPOOL 3be34dafe284501def9c0a567abee5db5eda5b25fcaa10fc8ffce957da381554ef2a46d523483e23804acedb743dc3c5626ebdee07df7ea7e107b6827d08bdc9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQoXOnAAoJEJOE+m71LUu6yEgP/0BLS3ud0B20dZ8svW4CxKg5
-nUZwMfWcvX3uiCSuF8PEbkCqowYuE/a6rbfxUTOaUIC7URED+whL/QLHSbZwTnc0
-+yXn6eKVcIf96ADEabs61f+qDMKLgYjKrjwo8Sfd7qDETRJQ8pc8gWcIgzc3RJka
-uJ5ZJAuwSfh9aPJ/PHvhJFXDHPLkKeeDTdflbFkwkMh/cYiYl5BDKjSsoFYQ2fhc
-QDez4yJvIOSsuclN2OliFFvePES3p7NHxIaB4sqMuiN0LucWvj5twEkUSFQm7oUH
-LbpNJPWr428HTk4fmA0fwt4tJtoAuXfGMXNuUbXUHQ44jdKUn1Tm2RRMfyNgE6Bv
-q1xgXZgspDnl3kNYOgJwzlDswoDWhvaTXUBfz6ADbSLwz3NbOP+QxnLW+Ra6b7LA
-QslTtlvYmupxyk/MGOTeWKyPdF9NKEhbqsVyDqjtOgGr8ipgwmcppwrrvcugxTtu
-rD8S+2+kxRpUdj087otrzqd7Doe1TaYMzf/joOuaFFBc3orT+4p9FSF1K7JQGvHK
-khewqwgCAanlsUiMW/ikXLQw2ZXxUvi5lV+Oot5c/O+gpqkBpcD6RgeykgPWbMwD
-O2zZibaMZexkzbQGj0ZX67VAxYwZJmxr05qfb0HmZQZcNYiwpi9Kur7q5P03ipiF
-kZdu3bU2yTqaszSZwDhH
-=vK9U
+iEYEAREIAAYFAlCih7AACgkQVWmRsqeSphOx7ACcCNd0AEjtW0BcXR/KnObdo2Ee
+uAEAnRSu+kQjPq2AmTcwc4u8XRGRJl4R
+=H1BG
 -----END PGP SIGNATURE-----
