@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/openpgm/openpgm-5.1.118.ebuild,v 1.4 2012/11/12 22:09:51 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/openpgm/openpgm-5.1.118.ebuild,v 1.5 2012/11/13 17:47:27 jer Exp $
 
 EAPI=3
 inherit autotools
@@ -12,7 +12,7 @@ SRC_URI="http://openpgm.googlecode.com/files/libpgm-${PV}~dfsg.tar.gz"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="amd64 ~ppc x86"
+KEYWORDS="amd64 ~hppa ~ppc x86"
 IUSE="static-libs"
 
 DEPEND=""
