@@ -10,23 +10,13 @@ EBUILD zeromq-2.1.10.ebuild 1325 SHA256 3fce8df4a164240c17163a5a7e49844794f74bd6
 EBUILD zeromq-2.1.11.ebuild 1325 SHA256 054ad8d7d1d0bc7ac0ba677dcca02520fdaca7a473d34be6ae28b198e76767fd SHA512 1e7da280a0a01a3c311d3a0581fee03bb543933987569b12f0aff60e8c06d38fb5f866bdd6107b7b687c31de197329024bdb55c5285ef9f850ad3623b4a9c4e6 WHIRLPOOL 0be90411146c83442550bf8727123fe9a83f20aca704d454011a14f5c531fb834a746e4f1cd2de12097e3f1fd262ba525ca0b691c7e4908e502806b1665c3ba6
 EBUILD zeromq-2.1.7.ebuild 1324 SHA256 2207ab11cf604fbec7c9429fe843b35aeb9892dfc6eba0b6f9efa81dfb2c18ef SHA512 a0b8b2cdf9e39fc1142479e7646130efaafbb8b68b3c66e8bc3a02b3c44fde8f0555c0119630d86eb58938e4c86dc1b99efb3d3500999d15f2be9aff551d1f73 WHIRLPOOL cb99221cb4583099906e34adf1134344462737233b3430442c5a42a120ec2617c77452e3b5478d788cac597ea24a7799cdc831029be01270cfdfc76936c3dc33
 EBUILD zeromq-2.1.9.ebuild 1326 SHA256 0a647bedeb613db96e443bb771e5f809e63586d095f5e6b304070a209a380a73 SHA512 26b4306b6c741290e7657e9435d06de038c5d3ee656e193754b7e2ae94405ac8a9b3ce866c69ff30509a997b72bd64811282e9876ea05252c5e0410e7b6c17b1 WHIRLPOOL 977601d4c948348a50e15421cf4d4658732f3add145010f3585430eac8a52ba9f0243d81bd7df5c7b3ff533eeaf0c565effb058be53cd6bbeeda991bf1906d8c
-EBUILD zeromq-2.2.0.ebuild 1355 SHA256 0322e2db2c9244e95c3505e9a101b3abb03327efb98927670cb7afa242957899 SHA512 2d13f83a6589a72126ef7baefa4c9ff2e840e6bddcb148a470cb7fb99e6841bcb0edb0bb0dcb562c4321420b4612d05d4bbb3b1b59fe9dc340b2b83f9d804e20 WHIRLPOOL f9b3e6a9360815e635f275dfad5b08bac3a7fff00f936696eb8ebe37f201389c03a85fc90ed2f586aed022e29e297dfe19d6aeeeb456b456fbdf76a2103d11fb
-MISC ChangeLog 3701 SHA256 edd7b70af56eabc2787b0ae60c345f3e246447bfa63dd5b1b18a1ed1bacd7edd SHA512 a499be8eafc66e20f595648801319a4bafcddcfe1f19b1cf3fabd6b498a2e96c7d2240332ed343ce50092eaf85d30eac5f9a678f1a889403357b05239156583e WHIRLPOOL 3d8af0b699ea57d7bbf7c8ef44f4f050c07a2b7c150b9304323d8e578acc76cf1045656d07cf5ea1aebde12674156db48ac5fad8f41c0d8663c92be2336c52b0
+EBUILD zeromq-2.2.0.ebuild 1356 SHA256 4f1b022b864776febd230eb355aeccf810aa9f54d561e280b1269d310fdbf57a SHA512 5f40f06338d2b52432f388ba73cdd34c52045f0a58c4a123aa4807b1008f5d7ef335e5d77ada7cf0376beeb9a29ff629fa6b5a33ffb5de0e9f441b8c16fd29cb WHIRLPOOL 32ceef9fc5cc015ca43191183b997fe393f33807bf875172e4459481b909d2947eaca77e408ce3bd7c26ac016ed307452cdc934a6a1f869be7e2c12b1933230b
+MISC ChangeLog 3795 SHA256 ea558fe85ce5166810945ed5954176005eed99cb45431d1d2664b893342ecdfa SHA512 40f49e31000dd576443b99ffdd351d55b542aec5222ad6afbb47bffdc78a72ce262093b1f6c7a1b530af9732b12d0831a5872071a8e261a565b50f78740761a1 WHIRLPOOL 036fdff68bfa47319a0c1e6c86ea4909cd11273e4e317fb657cbfde901b62032fc68de2a194f694a0fe5684643ab360b39f97e139d73ec1711ccf32a2ca6a36b
 MISC metadata.xml 1167 SHA256 3409ff8c6b1e3d10c51ed17422b802a0fd33861a9b755f025f1d96b6e0a6dcae SHA512 d0bba9a730e0478f3a9f4cb82425057d71fd17a4ed29dc0259e742a38a939ef562b08f6afe082252c6e56ea56a20fe50a31ec23c28987ddbf6bf18e070e3f29f WHIRLPOOL 70581f236fe7ecd23e74892b5fac52358fcd557ed5c79829398bae9a9d383dab6515d18b9300d2d31aedf1981d2933fa01c7f98e60aae4065f5178e0c6d2579d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQoXPHAAoJEJOE+m71LUu65CwP/2Gxzv/z/KuU8A/QvkqqVslG
-50oHDZSWGgYJrDxaR41dVCj1E3XCzBd5WCjUwFoygygMN5EZtcuLr+jVAaRKlYcX
-9J5NJ7stfJXlu2fBSKnBrs+64fgJuoLjQSO2uSiw0CRMpfWKQTpTBZ1QwjaKWXrA
-XyYPHYMPFQTGJSehTI8QDS8QnsZQCtRRFEvm3qnIEh4R8q6jjSthBefp7ktPE2rU
-pRigolIi0GQEPfzrubQOuaKAoXiCLYbB2VEQZ84U5TWiqTOu5VBXSA2VPEHb2lcO
-2jFJ602VoX4TkN44aJtDIVYAKcXe9oash3H70HmzbuQLIR3OmThJp+k7v5ZT/CHb
-A7m65HWB9sjhrdPaNFKDMqG1ffEERPceYXtzqIuC7goFoiGqL0MMsO2zLCNMDTnk
-aFwMM0XT0b4vbuNYLHE8fS92TP5SW433ZPjJKuhUwhLLn6s8Gw8xyefry++n2nBX
-IGU3BbzxJjuhMlbunBr/opAQamHnyb/j8BIRoW5ei3uzMGCVFBbzjUaIXP9P9vUY
-wkr6CwXDDLO2koiHGyYUk7Ud5odedx9wtwTTr5LdpG4rkTeyLQdnocp8YJMaj8AK
-sjg45H0SgiPNpHUkbpcAkCplb3sal14c24W9JDOj4yxjUT3OKY/e0kx0jd2qf5R5
-DZ829tdwp4IsTI2bFkoO
-=vsqo
+iEYEAREIAAYFAlCih9oACgkQVWmRsqeSphOJ8wCfcbvly3VMxNcPUp5YEn93eweR
+vfAAn146GEJv4U38h2T3Q12wSgvpuLqK
+=nI74
 -----END PGP SIGNATURE-----
