@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/zeromq
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/zeromq/ChangeLog,v 1.28 2012/11/12 22:10:24 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/zeromq/ChangeLog,v 1.29 2012/11/13 17:48:09 jer Exp $
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> zeromq-2.2.0.ebuild:
+  Marked ~hppa (bug #442188).
 
   12 Nov 2012; Anthony G. Basile <blueness@gentoo.org> zeromq-2.2.0.ebuild:
   keyword ~ppc, bug #442188
