@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/openpgm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/openpgm/ChangeLog,v 1.9 2012/11/12 22:09:51 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/openpgm/ChangeLog,v 1.10 2012/11/13 17:47:27 jer Exp $
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> openpgm-5.1.118.ebuild:
+  Marked ~hppa (bug #442188).
 
   12 Nov 2012; Anthony G. Basile <blueness@gentoo.org> openpgm-5.1.118.ebuild:
   keyword ~ppc, bug #442188
